Bug 402883 - Useless search in installed apps
Summary: Useless search in installed apps
Status: VERIFIED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.14.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-05 08:26 UTC by Felipe Peter
Modified: 2019-01-09 19:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.0
Sentry Crash Report:


Attachments
Searching for "pycha" (107.66 KB, image/png)
2019-01-05 08:26 UTC, Felipe Peter
Details
Searching for pycharm pro (101.59 KB, image/png)
2019-01-05 15:50 UTC, Felipe Peter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Felipe Peter 2019-01-05 08:26:02 UTC
Created attachment 117292 [details]
Searching for "pycha"

SUMMARY
Searching in installed apps gives completely useless results.

STEPS TO REPRODUCE
1. Click "Installed"
2. Search for any installed application

OBSERVED RESULT
The search results seem arbitrary. Check out the screenshots for examples.

EXPECTED RESULT
I expect the app with the name that most closely resembles my search to be at the top of the list. 

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.14
KDE Plasma Version: 5.14.4
Qt Version: 5.11.2
KDE Frameworks Version: 5.53.0
Kernel Version: 4.15.0-43-generic
OS Type: 64-bit
Comment 1 Felipe Peter 2019-01-05 15:50:44 UTC
Created attachment 117297 [details]
Searching for pycharm pro
Comment 2 Nate Graham 2019-01-06 14:41:00 UTC
I've experienced this off and on too. :/
Comment 3 Aleix Pol 2019-01-08 17:29:48 UTC
Git commit 9d5fa1b20a5373e278d9f2e5ef051df96210097d by Aleix Pol.
Committed on 08/01/2019 at 17:27.
Pushed by apol into branch 'master'.

snap: fix filtering of installed snaps

We were always displaying them all

M  +15   -3    libdiscover/backends/SnapBackend/SnapBackend.cpp
M  +5    -0    libdiscover/backends/SnapBackend/SnapBackend.h

https://commits.kde.org/discover/9d5fa1b20a5373e278d9f2e5ef051df96210097d
Comment 4 Nate Graham 2019-01-08 21:41:41 UTC
Thanks Aleix!

Is this backportable to 5.14.x?
Comment 5 Nate Graham 2019-01-08 23:44:09 UTC
Verified that this fixes the problem.
Comment 6 Aleix Pol 2019-01-09 19:24:31 UTC
We can (and it applies cleanly), although 5.14.6 won't happen so it's not going to make a difference. :/
Comment 7 Nate Graham 2019-01-09 19:41:04 UTC
Oh, of course.