snap: fix filtering of installed snaps

We were always displaying them all

BUG: 402883